# rattler-build-test

./: setup.cfg
recipe/: recipe.yaml
