[metadata]
name = rattler-build-test
version = 0.2.0
platforms = any
python_requires = >=3.10

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    pandas >=1.4,!=1.5.*,!=2.0.*,!=2.1.*

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
